--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
   <link rel="stylesheet" href="app.min.css"/>
   <style>
     :root{
-      --ink:#111; --sub:#444; --muted:#777; --line:#eaeaea;
-      --bg:#fafafa; --card:#fff;
-      --accent:#A47864; /* Mocha Mousse */
-      --light:#F7F5F4; 
+      --ink:#111; --sub:#5a4a43; --muted:#777; --line:#eaeaea;
+      --bg:#fafafa; --card:#fff; --brand:#A47864; /* Mocha Mousse */
     }
     html,body{margin:0; background:var(--bg); color:var(--ink); font-family:'Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
     .container{max-width:1200px; margin:0 auto; padding:0 20px}
     section{padding:60px 0}
+    h1{margin:0 0 12px; font-size:3rem; font-weight:900; letter-spacing:-.02em; line-height:1.15}
+    p{margin:0; color:var(--sub); line-height:1.65}
 
-    /* 버튼 */
-    .btn{display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s}
-    .btn.primary{background:#111; color:#fff}
-    .btn.primary:hover{background:var(--accent); color:#fff}
-    .btn.secondary{border:2px solid #111; color:#111; background:#fff}
-    .btn.secondary:hover{background:var(--accent); color:#fff; border-color:var(--accent)}
+    /* Buttons (Mocha tone) */
+    .btn{
+      display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s
+    }
+    .btn.primary{
+      background:var(--brand); color:#fff;
+    }
+    .btn.primary:hover{
+      background:#8b6452; /* darker mocha hover */
+    }
+    .btn.secondary{
+      border:2px solid var(--brand); color:var(--brand); background:#fff;
+    }
+    .btn.secondary:hover{
+      background:#F7F5F4; /* soft mocha background */
+    }
 
     /* 오른쪽 고정 CTA */
     .cta-dock{
@@ -34,42 +44,18 @@
       .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
     }
 
-    /* ===== Hero 블록 ===== */
-    .hero-block{
-      background:var(--light);
-      padding:90px 0 70px;
-      text-align:center;
-      border-bottom:1px solid var(--line);
+    /* Hero 블록 */
+    .hero{
+      background:#fff; padding:88px 0 36px; border-bottom:1px solid var(--line);
     }
-    .hero-block h1{
-      font-size:2.6rem; font-weight:900; margin-bottom:16px; color:var(--ink);
-    }
-    .hero-block .sub{
-      font-size:1.05rem; color:var(--sub); margin-bottom:28px; line-height:1.6;
-    }
-    .rules{
-      display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin-bottom:50px;
-    }
-    .rule{
-      background:#fff; border:2px solid var(--accent); color:var(--accent);
-      padding:8px 14px; border-radius:999px; font-weight:700; font-size:.95rem;
-    }
+    .hero h1{font-size:2.6rem}
+    .sub-lines{margin-top:14px; display:flex; flex-direction:column; gap:6px; font-weight:600; color:var(--sub)}
 
-    .cases{
-      display:grid; grid-template-columns:repeat(4,1fr); gap:16px;
-    }
-    .case-card{
-      background:#fff; border:2px solid var(--accent); border-radius:12px;
-      padding:20px; font-weight:600; font-size:1rem; color:var(--ink);
-      transition:.2s; text-align:center;
-    }
-    .case-card:hover{
-      background:var(--accent); color:#fff;
-    }
+    .chips{margin-top:18px; display:flex; gap:10px; flex-wrap:wrap}
+    .chip{border:1px solid var(--line); background:#fff; padding:8px 14px; border-radius:999px; font-weight:700; font-size:.95rem}
 
-    /* ===== 프로젝트 목록 ===== */
+    /* 프로젝트 목록 */
     .projects h2{margin:0 0 14px; font-size:1.4rem; font-weight:900; letter-spacing:-.01em; text-align:center}
-    .projects .more{text-align:center; margin-top:12px}
     .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:18px}
     .project-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:14px; transition:.2s}
     .project-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
@@ -77,12 +63,9 @@
     .project-card h3{margin:8px 0 4px; font-size:1.05rem}
     .muted{color:var(--muted); font-size:.9rem}
 
-    /* 반응형 */
-    @media(max-width:900px){ .cases{grid-template-columns:1fr 1fr} }
-    @media(max-width:560px){
+    @media (max-width:560px){
       section{padding:48px 0}
-      .hero-block h1{font-size:2.1rem}
-      .cases{grid-template-columns:1fr}
+      h1{font-size:2.2rem}
     }
   </style>
 </head>
@@ -96,27 +79,19 @@
     <a href="create.html" class="btn secondary">등록하기</a>
   </div>
 
-  <!-- Hero 블록 -->
-  <section class="hero-block">
+  <!-- Hero -->
+  <section class="hero">
     <div class="container">
       <h1>개인↔개인을 연결하는, 국내 첫 기부 플랫폼</h1>
-      <p class="sub">
-        #흩어진 개인 구조 활동을 PAW에서 연결하고 싶었습니다.<br/>
-        #혼자 시작한 구조가 혼자 끝나지 않도록 투명하게
-      </p>
-
-      <div class="rules">
-        <span class="rule">개인↔개인</span>
-        <span class="rule">후원금 100% 전달</span>
-        <span class="rule">구조자 30% 책임</span>
-        <span class="rule">Beta 운영 중</span>
+      <div class="sub-lines">
+        <span>#흩어진 개인 구조 활동을 PAW에서 연결하고 싶었습니다.</span>
+        <span>#혼자 시작한 구조가 혼자 끝나지 않도록 투명하게</span>
       </div>
-
-      <div class="cases">
-        <div class="case-card">🐾 유기동물 구조 후 병원비</div>
-        <div class="case-card">✂️ 중성화 비용(무지원)</div>
-        <div class="case-card">🩺 입양 후 첫 검진비</div>
-        <div class="case-card">🏠 기타 보호 활동</div>
+      <div class="chips">
+        <span class="chip">개인↔개인</span>
+        <span class="chip">후원금 100% 전달</span>
+        <span class="chip">구조자 30% 책임</span>
+        <span class="chip">증빙 필수</span>
       </div>
     </div>
   </section>
@@ -124,12 +99,9 @@
   <!-- 프로젝트 목록 -->
   <section class="projects">
     <div class="container">
-      <h2>진행 중인 프로젝트</h2>
+      <h2>진행 중인 프로젝트 <a href="project_list.html" class="btn secondary" style="margin-left:10px; font-size:.85rem; padding:6px 12px">모두보기</a></h2>
       <div id="projects-grid" class="grid">
         <div class="muted">불러오는 중...</div>
-      </div>
-      <div class="more">
-        <a href="project_list.html" class="btn secondary">모두 보기</a>
       </div>
     </div>
   </section>
@@ -137,7 +109,7 @@
   <!-- footer include -->
   <div data-include="footer"></div>
 
-  <!-- 스크립트 -->
+  <!-- Script -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -175,6 +147,7 @@
         $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
+
     render();
   </script>
 </body>
