--- a/index.html
+++ b/index.html
@@ -6,91 +6,70 @@
   <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=SUIT:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
       --ink:#111; --sub:#444; --muted:#777; --line:#eaeaea;
       --bg:#fafafa; --card:#fff;
-      --brand:#A47864; /* Mocha Mousse */
-      --brand-hover:#8b6452;
+      --mocha:#A47864; --mocha-dark:#8b6452;
     }
     html,body{
-      margin:0; background:var(--bg); color:var(--ink);
-      font-family:'SUIT','Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif
+      margin:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family:'Inter','SUIT','Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif
     }
     .container{max-width:1200px; margin:0 auto; padding:0 20px}
-    section{padding:70px 0}
-    h1{margin:0 0 14px; font-size:2.6rem; font-weight:800; line-height:1.25}
-    h2{margin:0 0 18px; font-size:1.6rem; font-weight:700; text-align:center}
-    p{margin:0; color:var(--sub); line-height:1.65}
+    section{padding:64px 0}
+
+    /* Hero */
+    .hero{text-align:center; padding:100px 20px 70px}
+    .hero h1{margin:0 0 18px; font-size:3.2rem; font-weight:900; line-height:1.2}
+    .hero p.sub{margin:6px 0; font-size:1.2rem; font-weight:600; color:var(--sub)}
+
+    /* Chips as CTA buttons */
+    .chips{
+      margin-top:26px;
+      display:flex; gap:14px; justify-content:center; flex-wrap:wrap;
+    }
+    .chip{
+      background:var(--mocha);
+      color:#fff;
+      padding:12px 20px;
+      border-radius:999px;
+      font-weight:700;
+      font-size:1.05rem;
+      transition:.2s;
+    }
+    .chip:hover{ background:var(--mocha-dark) }
 
     /* Buttons */
     .btn{display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s}
-    .btn.primary{background:var(--brand); color:#fff}
-    .btn.primary:hover{background:var(--brand-hover)}
-    .btn.secondary{border:2px solid var(--brand); color:var(--brand); background:#fff}
+    .btn.primary{background:var(--mocha); color:#fff}
+    .btn.primary:hover{background:var(--mocha-dark)}
+    .btn.secondary{border:2px solid var(--mocha); color:var(--mocha); background:#fff}
     .btn.secondary:hover{background:#f7f5f4}
 
-    /* 오른쪽 고정 CTA */
-    .cta-dock{
-      position:fixed; right:22px; top:50%; transform:translateY(-50%);
-      display:flex; flex-direction:column; gap:10px; z-index:60;
-      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
-    }
-    @media (max-width:1024px){
-      .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
-    }
-
-    /* HERO */
-    .hero{background:#fff; text-align:center; padding:100px 20px}
-    .hero .sub{color:var(--sub); margin:14px 0; font-size:1.1rem; line-height:1.6}
-    .chips{margin-top:18px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center}
-    .chip{background:#fafafa; border:1px solid var(--line); border-radius:999px; padding:8px 14px; font-weight:600; font-size:.95rem}
-
-    /* CASES BLOCK */
-    .cases-block{background:#f6f6f6}
-    .cases-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:18px}
-    .case-card{
-      background:#fff; border:1px solid var(--line); border-radius:12px; padding:20px; text-align:center;
-      transition:.2s
-    }
-    .case-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
-    .case-card i{font-size:1.5rem; display:block; margin-bottom:8px}
-    .case-card b{display:block; margin-bottom:6px; font-size:1.05rem}
-
-    /* PROJECTS */
-    .projects h2{margin:0 0 14px; font-size:1.4rem; font-weight:800; text-align:center}
+    /* Projects */
+    .projects h2{margin:0; font-size:1.6rem; font-weight:900; letter-spacing:-.01em}
+    .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:22px}
     .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:18px}
     .project-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:14px; transition:.2s}
     .project-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
     .project-card img{width:100%; height:180px; object-fit:cover; border-radius:10px}
-    .project-card h3{margin:8px 0 4px; font-size:1.05rem}
+    .project-card h3{margin:8px 0 4px; font-size:1.1rem; font-weight:700}
     .muted{color:var(--muted); font-size:.9rem}
-
-    @media (max-width:560px){
-      h1{font-size:2rem}
-      section{padding:52px 0}
-    }
   </style>
 </head>
 <body>
   <!-- header include -->
   <div data-include="header"></div>
 
-  <!-- 오른쪽 고정 CTA -->
-  <div class="cta-dock">
-    <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
-    <a href="create.html" class="btn secondary">등록하기</a>
-  </div>
-
-  <!-- HERO -->
+  <!-- Hero -->
   <section class="hero">
     <div class="container">
       <h1>개인↔개인을 연결하는, 국내 첫 기부 플랫폼</h1>
-      <p class="sub">
-        #흩어진 개인 구조 활동을 PAW에서 연결하고 싶었습니다.<br/>
-        #혼자 시작한 구조가 혼자 끝나지 않도록 투명하게
-      </p>
+      <p class="sub">#흩어진 개인 구조 활동을 PAW에서 연결하고 싶었습니다.</p>
+      <p class="sub">#혼자 시작한 구조가 혼자 끝나지 않도록 투명하게</p>
       <div class="chips">
         <span class="chip">개인↔개인</span>
         <span class="chip">후원금 100% 전달</span>
@@ -100,23 +79,13 @@
     </div>
   </section>
 
-  <!-- CASES -->
-  <section class="cases-block">
-    <div class="container">
-      <h2>환영하는 구조 케이스</h2>
-      <div class="cases-grid">
-        <div class="case-card"><i>🐾</i><b>유기동물 구조</b>병원비 지원</div>
-        <div class="case-card"><i>✂️</i><b>중성화 비용</b>지원 불가 케이스</div>
-        <div class="case-card"><i>🩺</i><b>입양 후 검진</b>첫 건강검진 비용</div>
-        <div class="case-card"><i>🏠</i><b>보호/구조 활동</b>기타 발생 비용</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- PROJECTS -->
+  <!-- Projects -->
   <section class="projects">
     <div class="container">
-      <h2>진행 중인 프로젝트</h2>
+      <div class="header">
+        <h2>진행 중인 프로젝트</h2>
+        <a href="project_list.html" class="btn secondary">모두 보기 →</a>
+      </div>
       <div id="projects-grid" class="grid">
         <div class="muted">불러오는 중...</div>
       </div>
@@ -126,7 +95,6 @@
   <!-- footer include -->
   <div data-include="footer"></div>
 
-  <!-- Scripts -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -135,14 +103,11 @@
 
     const $grid = document.getElementById('projects-grid');
     const fmt = n => Number(n||0).toLocaleString('ko-KR');
-
     const cover = (p) =>
-      p.representativeImageUrl ||
-      p.coverUrl ||
+      p.representativeImageUrl || p.coverUrl ||
       (Array.isArray(p.galleryUrls) && p.galleryUrls[0]) ||
       (Array.isArray(p.images) && p.images[0]) ||
-      p.image || p.thumbnailUrl ||
-      'img/placeholder.svg';
+      p.image || p.thumbnailUrl || 'img/placeholder.svg';
 
     async function render(){
       try {
