--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
     .btn.secondary{border:2px solid var(--mocha); color:var(--mocha); background:#fff}
     .btn.secondary:hover{background:#f7f5f4}
 
+    /* 환영하는 구조 케이스 */
+    .cases{background:#f6f6f6}
+    .cases h2{text-align:center; font-size:1.6rem; font-weight:900; margin-bottom:28px}
+    .case-grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(260px,1fr)); gap:16px}
+    .case-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:18px; font-weight:600; text-align:center; transition:.2s}
+    .case-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
+
     /* Projects */
     .projects h2{margin:0; font-size:1.6rem; font-weight:900; letter-spacing:-.01em}
     .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:22px}
@@ -58,11 +65,27 @@
     .project-card img{width:100%; height:180px; object-fit:cover; border-radius:10px}
     .project-card h3{margin:8px 0 4px; font-size:1.1rem; font-weight:700}
     .muted{color:var(--muted); font-size:.9rem}
+
+    /* Fixed CTA Dock */
+    .cta-dock{
+      position:fixed; right:22px; top:50%; transform:translateY(-50%);
+      display:flex; flex-direction:column; gap:10px; z-index:60;
+      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
+    }
+    @media (max-width:1024px){
+      .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
+    }
   </style>
 </head>
 <body>
   <!-- header include -->
   <div data-include="header"></div>
+
+  <!-- Fixed CTA -->
+  <div class="cta-dock" aria-label="빠른 참여">
+    <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
+    <a href="create.html" class="btn secondary">등록하기</a>
+  </div>
 
   <!-- Hero -->
   <section class="hero">
@@ -75,6 +98,19 @@
         <span class="chip">후원금 100% 전달</span>
         <span class="chip">구조자 30% 책임</span>
         <span class="chip">증빙 필수</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- 환영하는 구조케이스 -->
+  <section class="cases">
+    <div class="container">
+      <h2>이런 구조 케이스를 환영합니다</h2>
+      <div class="case-grid">
+        <div class="case-card">유기동물 구조 후 병원비</div>
+        <div class="case-card">중성화 비용 (국가지원 불가 케이스)</div>
+        <div class="case-card">입양 후 첫 검진비</div>
+        <div class="case-card">기타 보호/구조 활동 비용</div>
       </div>
     </div>
   </section>
