--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
 
     /* Hero */
     .hero{text-align:center; padding:100px 20px 70px}
-    .hero h1{margin:0 0 18px; font-size:3.2rem; font-weight:900; line-height:1.2}
-    .hero p.sub{margin:6px 0; font-size:1.2rem; font-weight:600; color:var(--sub)}
+    .hero h1{margin:0 0 20px; font-size:3.4rem; font-weight:900; line-height:1.15; letter-spacing:-.02em}
+    .hero p.sub{margin:6px 0; font-size:1.25rem; font-weight:700; color:var(--sub); letter-spacing:-.01em}
 
-    /* Chips as CTA buttons */
+    /* Chips */
     .chips{
-      margin-top:26px;
+      margin-top:28px;
       display:flex; gap:14px; justify-content:center; flex-wrap:wrap;
     }
     .chip{
       background:var(--mocha);
       color:#fff;
-      padding:12px 20px;
+      padding:14px 22px;
       border-radius:999px;
-      font-weight:700;
-      font-size:1.05rem;
+      font-weight:800;
+      font-size:1.1rem;
       transition:.2s;
     }
     .chip:hover{ background:var(--mocha-dark) }
 
     /* Buttons */
-    .btn{display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s}
+    .btn{display:inline-block; padding:13px 20px; border-radius:12px; font-weight:800; text-decoration:none; transition:.2s}
     .btn.primary{background:var(--mocha); color:#fff}
     .btn.primary:hover{background:var(--mocha-dark)}
     .btn.secondary{border:2px solid var(--mocha); color:var(--mocha); background:#fff}
@@ -51,19 +51,19 @@
 
     /* 환영하는 구조 케이스 */
     .cases{background:#f6f6f6}
-    .cases h2{text-align:center; font-size:1.6rem; font-weight:900; margin-bottom:28px}
-    .case-grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(260px,1fr)); gap:16px}
-    .case-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:18px; font-weight:600; text-align:center; transition:.2s}
-    .case-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
+    .cases h2{text-align:center; font-size:1.7rem; font-weight:900; margin-bottom:30px}
+    .case-grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(260px,1fr)); gap:18px}
+    .case-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:20px; font-weight:700; font-size:1.15rem; text-align:center; transition:.2s}
+    .case-card:hover{transform:translateY(-3px); box-shadow:0 8px 18px rgba(0,0,0,.08)}
 
     /* Projects */
-    .projects h2{margin:0; font-size:1.6rem; font-weight:900; letter-spacing:-.01em}
-    .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:22px}
+    .projects h2{margin:0; font-size:1.7rem; font-weight:900; letter-spacing:-.01em}
+    .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:24px}
     .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:18px}
     .project-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:14px; transition:.2s}
     .project-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
     .project-card img{width:100%; height:180px; object-fit:cover; border-radius:10px}
-    .project-card h3{margin:8px 0 4px; font-size:1.1rem; font-weight:700}
+    .project-card h3{margin:8px 0 4px; font-size:1.15rem; font-weight:700}
     .muted{color:var(--muted); font-size:.9rem}
 
     /* Fixed CTA Dock */
@@ -120,7 +120,7 @@
     <div class="container">
       <div class="header">
         <h2>진행 중인 프로젝트</h2>
-        <a href="project_list.html" class="btn secondary">모두 보기 →</a>
+        <a href="project_list.html" class="btn primary">모두 보기 →</a>
       </div>
       <div id="projects-grid" class="grid">
         <div class="muted">불러오는 중...</div>
